# ntex

./: .env  .gitignore  Cargo.toml  malicious.js  run.bat
entity/: Cargo.toml
entity/src/: mod.rs  post.rs  prelude.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: auth.rs  microservice.rs  models.rs  utilities.rs
